fix: distorted icons in timer and voting pills (#3930)

--- a/src/components/Timer/Timer.scss
+++ b/src/components/Timer/Timer.scss
@@ -55,7 +55,8 @@ $timer__progress-bar-color: #6096ff;
 }
 .timer > svg {
   position: absolute;
-  height: 100%;
+  height: $timer__content-height;
+  width: $timer__content-height;
   background-color: $color-dark-mode-note;
   color: $color-white;
   border-radius: 100%;
